<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".GTextMainActivity"
    android:background="@color/whitish">

    <LinearLayout android:id="@+id/id_ll_1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txt_sendTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:padding="10dp"
            android:textColor="#fff"
            android:background="@color/black"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/txt_Select_Grp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:textColor="@color/black"
            android:padding="3dp"
            android:text="@string/edit_Select_Grp"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="13dp"
            android:prompt="@string/spinner_prompt"/>

        <LinearLayout android:id="@+id/secondLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText android:id="@+id/edt_Greetings"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:textSize="13dp"
                android:hint ="@string/compose_greetings"
                android:inputType="textCapSentences|textMultiLine"
                android:scrollHorizontally="false"
                android:gravity="top"/>

            <Spinner
                android:id="@+id/spinnerThree"
                android:layout_height="50dp"
                android:padding="3dp"
                android:textSize="10dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:prompt="@string/spinner_prompt"/>

        </LinearLayout>



        <EditText
            android:id ="@+id/edtInput"
            android:layout_width ="fill_parent"
            android:layout_height ="wrap_content"
            android:layout_weight ="1"
            android:inputType="textCapSentences|textMultiLine"
            android:maxLines ="4"
            android:maxLength ="250"
            android:textSize="13dp"
            android:hint ="@string/compose_hint"
            android:scrollHorizontally="false"
            android:gravity="top"/>


        <LinearLayout android:id="@+id/fourthLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button android:id="@+id/btn_send_snd"
                android:hint="@string/btn_send"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <Button android:id="@+id/btn_send_clear"
                android:hint="@string/btn_clear"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>>

</RelativeLayout>